--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "breedFetcher.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "lint": "npx eslint ."
   },
   "keywords": [],
@@ -15,8 +15,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "chai": "^4.3.1",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
-    "globals": "^16.0.0"
+    "globals": "^16.0.0",
+    "mocha": "^11.1.0"
   }
 }
